--- a/Bloggie.Web/Views/Shared/_Layout.cshtml
+++ b/Bloggie.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,15 @@
                                     </a>
                                 </li>
 
+                                <li>
+                                    <a class="dropdown-item"
+                                       asp-area=""
+                                       asp-controller="AdminTags"
+                                       asp-action="List">
+                                        Show All Tags
+                                    </a>
+                                </li>
+
                             </ul>
                         </li>
                     </ul>
